# molvis

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
scripts/: fetch-web-libs.sh
src/: main.rs  models.rs  parser.rs
src/parser/: frequency.rs  geometry.rs
web/: app.js  cpkColors.js  index.html  style.css
web/modules/: exportPanel.js  frequencyPanel.js  geometry.js  measurement.js  molBuilder.js  thermochemistry.js  trendChart.js  vibration.js  viewerFrame.js
web/styles/: base.css  chart.css  layout.css  panels.css  viewer.css
