[package]
name = "molvis"
version = "0.1.1"
edition = "2021"
description = "CLI web viewer for ORCA .out trajectories with 3Dmol.js rendering"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yushengyangchem/molvis"
homepage = "https://github.com/yushengyangchem/molvis"
keywords = ["chemistry", "orca", "molecule", "visualization", "cli"]
categories = ["command-line-utilities", "science"]
exclude = [".direnv/**", "target/**", "*.out", "**/*.out"]

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
